2005-07-11  Sarfraaz Ahmed <asarfraaz@novell.com>

	* addressbook/Makefile.am : Include the e-d-s path first
	* addressbook/e-book-backend-gal.c : Use the new 
	exchange_account_connect method.
	* storage/exchange-config-listener.c : Similar
	* storage/exchange-storage.c : Similar
	* storage/GNOME_Evolution_Exchange_Storage.server.in.in : Dont show
	the exchange button now.
	* storage/Makefile.am : Remove xc-backend-view.[ch] and xc-commands.[ch]
	* storage/exchange-component.c : Remove the implementation for
	createControls method and also use the new exchange_account_connect
	method

2005-07-11  Sarfraaz Ahmed <asarfraaz@novell.com>

	Updated the sgml files.

2005-07-01  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Bumped the version to 2.3.4
	* NEWS : Updated

2005-07-01  Sarfraaz Ahmed <asarfraaz@novell.com>

	* camel/camel-exchange-provider.c : Remove the validate calls which
	are no longer used now from the plugin.
	* storage/xc-commands.c : Removed the dead code. All this has been 
	moved to the plugins.
	* docs/reference/Makefile.am : Dont use the libexchange.la from local
	area.
	* docs/reference/ximian-connector.types : Removed references to e2k-sid
	and e2k-user-dialog

2005-07-01  Chenthill Palanisamy <pchenthill@novell.com>
		
	* camel/camel-exchange-provider.c 
	(exchange_validate_user_cb): added the missing
	parameter result for the function e2k_validdate_user
	to avoid the build breaking.
	
2005-07-01  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-config-listener.c (account_added) : Dont add the 
	esources here. This is done in the plugin now.

2005-06-28  Sarfraaz Ahmed <asarfraaz@novell.com>

	* camel/camel-exchange-store.c (exchange_folder_subscribed)
	(exchange_subscribe_folder) (exchange_unsubscribe_folder) : Added new
	(get_folder_info) : Return a list of public folders if a list of
	unsubscribed folders is asked.
	* camel/camel-stub-constants.h : Added new enums for handling
	subscriptions.