@@ -1,7 +1,7 @@
 # Process this file with autoconf to produce a configure script.
 AC_PREREQ(2.52)
 
-AC_INIT(evolution-exchange, 2.3.4, http://bugzilla.ximian.com/enter_bug.cgi?product=Connector)
+AC_INIT(evolution-exchange, 2.3.5, http://bugzilla.ximian.com/enter_bug.cgi?product=Connector)
 AC_CONFIG_SRCDIR(storage)
 AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 
