@@ -1,3 +1,14 @@
+Evolution Exchange 2.3.5  2005-07-11
+------------------------------------
+
+	* The Exchange button has been removed. Now users should be able to 
+	  seamlessly get the full functionality of evolution-exchange through 
+	  the Mail/Contacts/Calendar/Tasks components of evolution.
+
+	  One major change being that most of the Exchange Account wide 
+	  operations have been now moved to the Evolution Account Editor
+	  window under the "Exchange Settings" tab for an Exchange Account.
+
 Evolution Exchange 2.3.4  2005-07-01
 ------------------------------------
 
