@@ -1,5 +1,11 @@
 2005-07-11  Sarfraaz Ahmed <asarfraaz@novell.com>
 
+	* storage/exchange-component.c : Removed the references to xc-backend
+	* configure.in : Bumped the version to 2.3.5
+	* NEWS : Updated
+
+2005-07-11  Sarfraaz Ahmed <asarfraaz@novell.com>
+
 	* addressbook/Makefile.am : Include the e-d-s path first
 	* addressbook/e-book-backend-gal.c : Use the new 
 	exchange_account_connect method.
